[package]
name = "servo-embedding-example"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "d7b4471c8080c0916277b967994bffcade759c3a" }
#libservo = { path = "../servo" }
glutin = "0.11"
clap = "2.20.5"

# workaround for mesa, which only supports GLSL 1.20
# https://github.com/servo/servo/issues/11124

[patch."https://github.com/servo/webrender"]
#
webrender = { path = "../servo-webrender/webrender" }
webrender_api = { path = "../servo-webrender/webrender_api" }
