[package]
name = "servo-embedding-example"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]

[dependencies]
# last good
#libservo = { git = "https://github.com/servo/servo", rev = "d7b4471c8080c0916277b967994bffcade759c3a" }
# 2017-12-11
libservo = { git = "https://github.com/servo/servo", rev = "6aae59e7e50531f45d78495cf07970001ef05f86" }
#libservo = { path = "../servo" }
glutin = "0.11"
clap = "2.20.5"
image = "0.17.0"
env_logger = "0.4.3"
log = "0.3.8"
hyper = "0.11.9"
futures = "0.1.17"
state_machine_future = "0.1.3"
mozjs = "0.1.8"

# workaround for mesa, which only supports GLSL 1.20
# https://github.com/servo/servo/issues/11124

#[patch."https://github.com/servo/webrender"]
#webrender = { path = "../servo-webrender/webrender" }
#webrender_api = { path = "../servo-webrender/webrender_api" }
# Webrender has been modified to use GLSL #version 130 instead of 150
# since the latest osmesa (17.3.0) supports only 130
[replace]
"https://github.com/servo/webrender#0.54.0" = { path = '../servo-webrender/webrender'}
"https://github.com/servo/webrender#webrender_api:0.54.0" = { path = '../servo-webrender/webrender_api' }
